--- a/src/main/resources/templates/regform.html
+++ b/src/main/resources/templates/regform.html
@@ -39,7 +39,7 @@
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" id="bth-search"
-                            class="btn btn-primary btn-lg">Search
+                            class="btn btn-primary btn-lg">등록
                     </button>
                 </div>
             </div>
