--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -19,7 +19,9 @@
 <div class="container" style="min-height: 500px">
 
     <div class="starter-template">
-        <h1><p th:text="${name}"> 등록을 환영합니다.</h1>
+        <h1>방문을 환영합니다.</h1><br/>
+        <a href="./regform">회원 등록 </a>
+        <a href="./products/new">상품 등록 </a>
     </div>
 
 </div>
