--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -2,63 +2,40 @@
 <html xmlns="http://www.w3.org/1999/xhtml" 
 	  xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>등록 폼</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>사용자 정보 조회</title>
+    <th:block th:include="fragments/header"></th:block>
+ 	<script type="text/javascript" src="/js/main.js"></script>
 </head>
 <body>
-
-<nav class="navbar navbar-inverse">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">Mkyong.com</a>
-        </div>
-    </div>
-</nav>
-
+<th:block th:include="fragments/nav"></th:block>
 <div class="container" style="min-height: 500px">
 
     <div class="starter-template">
-        <h1>Spring Boot AJAX Example</h1>
+        <h1>사용자 정보 조회</h1>
 
         <div id="feedback"></div>
 
         <table class="table">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">아이디</th>
-      <th scope="col">이름</th>
-      <th scope="col">회사</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row"><span th:text="${id}"></span></th>
-      <td><span th:text="${name}"></span></td>
-      <td><span th:text="${company}"></span></td>      
-    </tr>
-    
-  </tbody>
-</table>
+		  <thead class="thead-dark">
+		    <tr>
+		      <th scope="col">아이디</th>
+		      <th scope="col">이름</th>
+		      <th scope="col">회사</th>
+		    </tr>
+		  </thead>
+		  <tbody>
+		    <tr>
+		      <th scope="row"><span th:text="${id}"></span></th>
+		      <td><span th:text="${name}"></span></td>
+		      <td><span th:text="${company}"></span></td>      
+		    </tr>
+		    
+		  </tbody>
+		</table>
 
     </div>
 
 </div>
-
-<div class="container">
-    <footer>
-        <p>
-            © <a href="http://www.mkyong.com">Mkyong.com</a> 2017
-        </p>
-    </footer>
-</div>
-
-<script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
-  
-<script type="text/javascript" src="js/main.js"></script>
-
+<th:block th:include="fragments/footer"></th:block>
 </body>
 </html>
