--- a/src/main/resources/templates/userlist.html
+++ b/src/main/resources/templates/userlist.html
@@ -2,23 +2,38 @@
 <html xmlns="http://www.w3.org/1999/xhtml" 
 	  xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <title>사용자 목록 조회</title>
+    <th:block th:include="fragments/header"></th:block>
+ 	<script type="text/javascript" src="/js/main.js"></script>
 </head>
 <body>
-<table>
-<thead>
-	<tr>
-		<th>번호</th><th>이름</th><th>회사</th>
-	</tr>
-</thead>
-<tbody> 
-	<tr th:each="user : ${users}">
-		<td th:text="${user.id}">Id</td>
-		<td th:text="${user.name}">Id</td>
-		<td th:text="${user.company}">Id</td>
-	</tr>
-</tbody>
-</table>
+<th:block th:include="fragments/nav"></th:block>
+<div class="container" style="min-height: 500px">
+
+    <div class="starter-template">
+        <h1>사용자 목록 조회</h1>
+
+        <div id="feedback"></div>
+
+        <table class="table">
+		  <thead class="thead-dark">
+		    <tr>
+		      <th scope="col">아이디</th>
+		      <th scope="col">이름</th>
+		      <th scope="col">회사</th>
+		    </tr>
+		  </thead>
+		  <tbody>
+		    <tr th:each="user : ${users}">
+				<td th:text="${user.id}">Id</td>
+				<td th:text="${user.name}">Id</td>
+				<td th:text="${user.company}">Id</td>
+			</tr>
+		  </tbody>
+		</table>
+    </div>
+</div>
+<th:block th:include="fragments/footer"></th:block>
 </body>
+
 </html>
