--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,4 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" 
-    href="/webjars/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script type="text/javascript" src="/webjars/jquery/3.4.1/jquery.min.js"></script>
+    href="/webjars/bootstrap/4.3.1/dist/css/bootstrap.min.css">
+    <script type="text/javascript" src="/webjars/jquery/3.4.1/dist/jquery.min.js"></script>
