--- a/src/main/resources/templates/regform.html
+++ b/src/main/resources/templates/regform.html
@@ -3,23 +3,14 @@
 	  xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>등록 폼</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <th:block th:include="fragments/header"></th:block>
 </head>
 <body>
-
-<nav class="navbar navbar-inverse">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">Mkyong.com</a>
-        </div>
-    </div>
-</nav>
-
+<th:block th:include="fragments/nav"></th:block>
 <div class="container" style="min-height: 500px">
 
     <div class="starter-template">
-        <h1>Spring Boot AJAX Example</h1>
+        <h1>사용자 등록 폼</h1>
 
         <div id="feedback"></div>
 
@@ -49,20 +40,7 @@
 
 </div>
 
-<div class="container">
-    <footer>
-        <p>
-            © <a href="http://www.mkyong.com">Mkyong.com</a> 2017
-        </p>
-    </footer>
-</div>
-
-<script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
-  
-<script type="text/javascript" src="js/main.js"></script>
+<th:block th:include="fragments/footer"></th:block>
 
 </body>
 </html>
