--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -20,7 +20,7 @@
 
     <div class="starter-template">
         <h1>방문을 환영합니다.</h1><br/>
-        <a href="./regform">회원 등록 </a>
+        <a href="./regform.html">회원 등록 </a>
         <a href="./products/new">상품 등록 </a>
     </div>
 
