--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-inverse">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="">egyou.github.io</a>
+            <a class="navbar-brand" href="/">egyou.github.io</a>
+            <a class="navbar-brand" href="/regform">회원등록</a>
+            <a class="navbar-brand" href="/users">회원목록</a>
         </div>
     </div>
 </nav>
