--- a/src/main/resources/templates/include/nav.html
+++ b/src/main/resources/templates/include/nav.html
@@ -17,16 +17,16 @@
                                 <li class="nav-item active">
                                     <a class="nav-link" href="/">Home</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/login">Log-In</a>
+                                <li th:unless="${session.user}" class="nav-item">
+                                    <a class="nav-link" href="/login-form">Log-In</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/register">Register</a>
+                                <li th:unless="${session.user}" class="nav-item">
+                                    <a class="nav-link" href="/register-form">Register</a>
                                 </li>
-                                <li class="nav-item">
+                                <li th:if="${session.user}" class="nav-item">
                                     <a class="nav-link" href="/info">Info</a>
                                 </li>
-                                <li class="nav-item">
+                                <li th:if="${session.user}" class="nav-item">
                                     <a class="nav-link" href="/logout">Log-Out</a>
                                 </li>
                                 <li class="nav-item dropdown">
