--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -39,18 +39,17 @@
 						 -->
 						 <form th:action="@{'/users/{id}'(id=${id})}" 
 						 th:method="put" th:object="${user}">
-						<form action="/users" method="post" id="register_form">
 							<div class="mt-10">
-								<input type="text" name="userId" placeholder="사용자 아이디" onfocus="this.placeholder = ''" onblur="this.placeholder = '사용자 아이디'" required="" class="single-input" >
+								<input type="text" th:field="*{userId}" name="userId" placeholder="사용자 아이디" onfocus="this.placeholder = ''" onblur="this.placeholder = '사용자 아이디'" required="" class="single-input" ReadOnly>
 							</div>
 							<div class="mt-10">
-								<input type="password" name="userPw" placeholder="사용자 암호" onfocus="this.placeholder = ''" onblur="this.placeholder = '사용자 암호'" required="" class="single-input">
+								<input type="password" th:field="*{userPw}" name="userPw" placeholder="사용자 암호" onfocus="this.placeholder = ''" onblur="this.placeholder = '사용자 암호'" required="" class="single-input">
 							</div>
 							<div class="mt-10">
-								<input type="text" name="name" placeholder="사용자 이름" onfocus="this.placeholder = ''" onblur="this.placeholder = '사용자 이름'" required="" class="single-input">
+								<input type="text" th:field="*{name}" name="name" placeholder="사용자 이름" onfocus="this.placeholder = ''" onblur="this.placeholder = '사용자 이름'" required="" class="single-input">
 							</div>
 							<div class="mt-10">
-								<input type="password" name="company" placeholder="사용자 회사" onfocus="this.placeholder = ''" onblur="this.placeholder = '사용자 회사'" required="" class="single-input">
+								<input type="text" th:field="*{company}" name="company" placeholder="사용자 회사" onfocus="this.placeholder = ''" onblur="this.placeholder = '사용자 회사'" required="" class="single-input">
 							</div>
 							<div class="form-group mt-3">
 				              <button type="submit" class="button button-contactForm btn_4">
